--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
         android:title="@string/action_settings"/>
+    
+        <item
+        android:id="@+id/item2"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="item2"/>
 
 </menu>
