--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -4,12 +4,12 @@
         android:id="@+id/item1"
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
-        android:title="+"/>
+        android:title="Level+"/>
     <item
         android:id="@+id/item2"
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
-        android:title="-"/>
+        android:title="Level-"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
