--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -8,15 +8,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".GameActivity" >
 
-    <TextView
-        android:id="@+id/level"
+<!--     <com.example.isolate.GameView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/customview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" /> -->
+
+    <TextView
+        android:id="@+id/level"
         style="@android:style/TextAppearance.Medium"
-        android:typeface="sans"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Level" />
+        android:text="Level"
+        android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/puzzle"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button3"
+        android:layout_centerHorizontal="true"
+        android:text="Puzzle"
+        android:typeface="sans" />
 
     <Button
         android:id="@+id/button1"
