--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:layout_centerHorizontal="true"
         android:text="@string/welcome" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="TODO" 
+        android:src="@drawable/isolate" />
+
     <Button
         android:id="@+id/bNew"
         android:layout_width="wrap_content"
