--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:onClick="NewPuzzleOnClick"
+        android:onClick="newPuzzleOnClick"
         android:text="New" />
 
     <Button
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="SolveOnClick"
+        android:onClick="solveOnClick"
         android:text="Solve" />
 
     <Button
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:onClick="ResetOnClick"
+        android:onClick="resetOnClick"
         android:text="Reset" />
 
 </RelativeLayout>
