--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,12 +14,12 @@
         android:layout_centerHorizontal="true"
         android:text="@string/welcome" />
 
-    <ImageView
+<!--     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:contentDescription="TODO" 
-        android:src="@drawable/isolate" />
+        android:src="@drawable/isolate" /> -->
 
     <Button
         android:id="@+id/bNew"
