--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 		android:layout_centerInParent="true" android:text="@string/btn_Instructions" />
 
 	<Button android:id="@+id/bExit" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:layout_below="@id/bLevel"
+		android:layout_height="wrap_content" android:layout_below="@id/bInstructions"
 		android:layout_centerInParent="true" android:text="@string/btn_exit" />
 
 </RelativeLayout>
